# stenome

./: .gitignore  Cargo.toml  Gopkg.toml  LICENSE  README.rst  midi.go  stenome.go
learn/: learn.go  simple.go  ui.go
midilearn/: Cargo.toml  compare.go  midi.go
midilearn/examples/: chord.rs  dual.rs  lick.rs  scale.rs
midilearn/src/: lib.rs  note.rs  scales.rs
src/: dict-canonical.json  dict.rs  learn.rs  legacy.rs  lessons.json  lib.rs  main.rs  simple.rs  steno.rs  stroke.rs  term.rs  words.rs
src/words/: json.rs  mod.rs  sql.rs
timelearn/: Cargo.toml  learn.go  populate.go  stats.go  timelearn.go  timelearn_test.go
timelearn/etc/: up-20170704A-20170709A.sql
timelearn/src/: lib.rs
timelearn/tests/: learn.rs
