[package]
name = "stenome"
version = "0.1.0"
authors = ["davidb"]
description = "Plover drills, inspired by the Plover Dojo.  With SRS."
readme = "README.rst"
keywords = ["steno", "plover", "srs"]
license = "MIT"

[dependencies]
rand = "0.3"
serde_json = "0.9"
serde = "0.9"
serde_derive = "0.9"
termion = "1.3"

[dev-dependencies]
tempdir = "0.3"

[[bin]]
name = "stenome"
test = false
doc = false

# If we optimize the tests, it is reasonable to run the full tests.
#[profile.test]
#opt-level = 3
