[package]
name = "stenome"
version = "0.1.0"
authors = ["davidb"]
description = "Plover drills, inspired by the Plover Dojo.  With SRS."
readme = "README.rst"
keywords = ["steno", "plover", "srs"]
license = "MIT"

[dependencies]
rand = "0.3"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
termion = "1.3"
rusqlite = "0.11"

timelearn = { path = "timelearn" }

[dev-dependencies]
tempdir = "0.3"

[[bin]]
name = "stenome"
test = false
doc = false

# If we optimize the tests, it is reasonable to run the full tests.
#[profile.test]
#opt-level = 3
