[package]
name = "midilearn"
version = "0.1.0"
authors = ["davidb"]

[dependencies]
timelearn = { path = "../timelearn" }
portmidi = "0.2.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "0.2"
editdistancewf = "0.2"

[[example]]
name = "scale"
path = "examples/scale.rs"

[[example]]
name = "dual"

[[example]]
name = "chord"
path = "examples/chord.rs"

[[example]]
name = "lick"
path = "examples/lick.rs"
